eks_security (1)/eks_security/alb_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: alb-ingress
   annotations:
     alb.ingress.kubernetes.io/scheme: internal
     alb.ingress.kubernetes.io/load-balancer-type: nlb
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
       - path: /test
         pathType: Prefix
         backend: 
          service:
           name: testsvc
           port:
            number: 80 
       - path: /dev
         pathType: Prefix
         backend: 
          service:
           name: devsvc
           port:
            number: 80
